Code Optimize and Add React Skeleton

--- a/public/index.html
+++ b/public/index.html
@@ -18,6 +18,14 @@
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
     -->
   <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+  <!-- 
+    Mallanna: CSS class for a variable style
+    <uniquifier>: Use a unique and descriptive class name
+      <weight>: Use a value from 400 to 900
+   -->
+   <link rel="preconnect" href="https://fonts.googleapis.com">
+   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+   <link href="https://fonts.googleapis.com/css2?family=Kufam:ital,wght@0,400..900;1,400..900&family=Mallanna&display=swap" rel="stylesheet">
   <!--
       Notice the use of %PUBLIC_URL% in the tags above.
       It will be replaced with the URL of the `public` folder during the build.
@@ -27,7 +35,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-  <title>Blog</title>
+  <title>Blog | Never Wrong, Always Write</title>
 </head>
 
 <body>
